terraform/alb.tf
resource "aws_lb" "main" {
  name               = "exchange-rate-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [aws_subnet.public_1a.id, aws_subnet.public_1c.id]
}

resource "aws_lb_target_group" "main" {
  name        = "exchange-rate-tg"
  port        = 8000 # コンテナのポート
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip" # Fargateは必ず "ip"

  health_check {
    path = "/" # アプリのヘルスチェック用パス
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.main.arn
  }
}
